<resources>
    <string name="app_name">Alisgram</string>
    <string name="title_activity_profil">Profil</string>
    <string name="title_home">Anasayfa</string>
    <string name="title_kesfet">Keşfet</string>
    <string name="title_aliskanlik">Ekle</string>
    <string name="title_profil">Profil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_special_for_you">Senin İçin</string>
    <string name="txt_spor">Spor</string>
    <string name="txt_life">Yaşam</string>
    <string name="txt_fun">Eğlence</string>


    <string name="client_id">962977850206-ktl2a178heut8dlj6cdnvdcsrgb0b5ca.apps.googleusercontent.com</string>
    <string name="NOTIFICATION_ID_KEY">1</string>
</resources>
