<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="Ara..."
        android:paddingStart="60dp" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/search" />

    <HorizontalScrollView
        android:id="@+id/hsvSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSearch"
        android:paddingStart="10dp"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/search"
                android:text="@string/txt_special_for_you" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/search"
                android:text="@string/txt_spor"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/search"
                android:text="@string/txt_life" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/search"
                android:text="@string/txt_fun" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/search"
                android:text="@string/txt_special_for_you" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/search"
                android:text="@string/txt_special_for_you" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/search"
                android:text="@string/txt_special_for_you" />


        </LinearLayout>

    </HorizontalScrollView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/hsvSearch"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/mainAccent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"
            android:src="@drawable/search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:text="Kullanıcı Adı"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="70dp"
            android:text="Alışkanlık Adı"
            android:textSize="20sp" />

        <RatingBar
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="60dp"
            android:rating="3" />


    </android.support.v7.widget.CardView>

</RelativeLayout>